--- a/.github/workflows/deploy-to-minikube-github-actions.yaml
+++ b/.github/workflows/deploy-to-minikube-github-actions.yaml
@@ -25,4 +25,6 @@ jobs:
     - name: Test service URLs
       run: |
           minikube service list
+          kubectl get pods
+          kubectl get services
           minikube service nodejs-app --url
