--- a/.github/workflows/deploy-to-minikube-github-actions.yaml
+++ b/.github/workflows/deploy-to-minikube-github-actions.yaml
@@ -22,9 +22,11 @@ jobs:
     - name: Deploy to minikube
       run:
         kubectl apply -f k8s-node-app.yaml
+    - name: Verify that deployment is runnig
+      run: kubectl get deployments
+    - name: Verify that service is runnig
+      run: kubectl get services
     - name: Test service URLs
       run: |
           minikube service list
-          kubectl get pods
-          kubectl get services
           minikube service nodejs-app --url
