--- a/.github/workflows/deploy-to-minikube-github-actions.yaml
+++ b/.github/workflows/deploy-to-minikube-github-actions.yaml
@@ -18,12 +18,14 @@ jobs:
           eval $(minikube -p minikube docker-env)
           docker build -f ./Dockerfile -t devopshint/node-app:latest .
           echo -n "verifying images:"
-          docker images         
+          docker images
     - name: Deploy to minikube
       run:
         kubectl apply -f k8s-node-app.yaml
     - name: Verify that deployment is runnig
-      run: kubectl get deployments
+      run: |
+          kubectl get deployments
+          kubectl get pods
     - name: Verify that service is runnig
       run: kubectl get services
     - name: Test service URLs
