--- a/.github/workflows/deploy-to-minikube-github-actions.yaml
+++ b/.github/workflows/deploy-to-minikube-github-actions.yaml
@@ -21,7 +21,7 @@ jobs:
           docker images
     - name: Deploy to minikube
       run: kubectl apply -f k8s-node-app.yaml
-    - name: sleep for 30 seconds
+    - name: Sleep for 20 seconds
       run: sleep 30
     - name: Test service URLs
       run: |
